fixes (feedback)
