# src/main/java/nh/recipify/domain/api/admin/RecipeWithFeedbackCount.java
@@ -4,12 +4,19 @@ package nh.recipify.domain.api.admin;
 import jakarta.validation.constraints.NotNull;
 import nh.recipify.domain.model.Recipe;
 
-public record RecipeWithFeedbackCount(@NotNull Recipe recipe, @NotNull long feedbackCount) {
+public record RecipeWithFeedbackCount(@NotNull Recipe recipe,
+                                      @NotNull long approvedFeedbackCount,
+                                      @NotNull long rejectedFeedbackCount,
+                                      @NotNull long pendingFeedbackCount
+                                      ) {
     public static RecipeWithFeedbackCount of(Recipe r) {
-        return new RecipeWithFeedbackCount(r, 0);
+        return new RecipeWithFeedbackCount(r, 0, 0, 0);
     }
 
-    public static RecipeWithFeedbackCount of(Recipe r, long feedbackCount) {
-        return new RecipeWithFeedbackCount(r, feedbackCount);
+    public static RecipeWithFeedbackCount of(Recipe r,
+                                             @NotNull long approvedFeedbackCount,
+                                             @NotNull long rejectedFeedbackCount,
+                                             @NotNull long pendingFeedbackCount) {
+        return new RecipeWithFeedbackCount(r, approvedFeedbackCount, rejectedFeedbackCount, pendingFeedbackCount);
     }
 }
